# cube-registry

./: CLAUDE.md  CONTRIBUTOR_AGREEMENT.md  DEPRECATED.md  OWNERS.yaml  README.md  known-authors.yaml  pyproject.toml  registry-schema.json
.claude/commands/: update-openspec.md
.github/: pull_request_template.md
.github/workflows/: claude-md-audit.yml  generate-site.yml  manual-refresh.yml  periodic-health-check.yml  quick-check.yml  slow-check.yml  update-owners.yml
design/: registry_specs.md
docs/: index.html
docs/arithmetic-cube/: index.html
docs/miniwob/: index.html
docs/osworld/: index.html
docs/webarena-verified/: index.html
docs/workarena/: index.html
entries/: arithmetic-cube.yaml  counter-cube.yaml  miniwob.yaml  osworld.yaml  swebench-live.yaml  webarena-verified-cube.yaml  webarena-verified.yaml  workarena.yaml
openspec/: README.md
openspec/changes/nightly-monitoring/: deltas.md  proposal.md
openspec/specs/ci/: spec.md
openspec/specs/entry/: spec.md
openspec/specs/site/: spec.md
scripts/: ownership_check.py  quick_check.py  slow_check.py
site-src/: generate.py
site-src/templates/: benchmark.html.j2  index.html.j2
tests/: conftest.py  test_generate_site.py  test_health_check.py  test_ownership_check.py  test_quick_check.py  test_schema_validation.py  test_update_owners.py
